# LoRa433APRSiGate

./: boot.py  code.py  config.py  provision.sh  secrets.py
esppasst/: CMakeLists.txt  provision.sh  serial_passthrough.c  serial_passthrough.uf2
lib/: adafruit_connection_manager.mpy  adafruit_requests.mpy  usyslog.py
lib/adafruit_esp32spi/: adafruit_esp32spi.mpy  adafruit_esp32spi_socketpool.mpy
